--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,6 +3,11 @@
     padding: 0;
     box-sizing: border-box;
   }
+  .logo {
+      position:relative;
+      margin-right: 800px;
+      padding:40px;
+  }
   
   .header {
     background: radial-gradient(#fff, #ffd6d6);
@@ -13,7 +18,7 @@
   
   .navbar {
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     align-items: center;
   }
   
@@ -23,7 +28,7 @@
   }
   
   #siteitems li {
-    margin-right: 20px;
+    margin-right: 50px;
   }
   
   #siteitems li a {
@@ -100,7 +105,7 @@ margin:25px 0;
   }
 
   .col-3 img{
-      width:100%;
+      width:90%;
   }
 
   /* featured products */
@@ -138,5 +143,103 @@ margin:25px 0;
   }
 
   
+  .col-3{
+
+    transition:transform 0.5s;
+
+  }
+    .col-3:hover{
+      transform: translateY(-5px);
+  }
   
-  
+  .offer{
+    background: radial-gradient(#fff, #ffd6d6);
+    padding:30px 0;
+    margin-top: 80px;
+
+  }
+
+  .col-3 .offer-img{
+    padding:50px;
+  }
+
+  small{
+    color: #555;
+    
+  }
+/* testimonials styles */
+
+.testimonials{
+  padding-top:30px;
+}
+
+.testimonials .col-3{
+  text-align:center;
+  padding:40px 20px;
+  box-shadow: 0 0 20px 0px rgba(0,0,0,0.1);
+}
+
+.testimonials img{
+  width: 70px;
+  border-radius:50%;
+  margin-top:20px;
+}
+.col-3 p{
+  font-weight:600;
+  color:#555;
+  font: size 16px;
+  cursor:pointer;
+}
+
+.brands{
+  margin:150px;
+}
+
+.col-5{
+  width:150px;
+}
+
+.col-5 img{
+  width: 100%;
+  cursor:pointer;
+  filter:grayscale(100%);
+}
+.col-5 img:hover{
+  filter:grayscale(0);
+  transform:translateY(-10px);
+}
+
+.footer{
+  background:#000;
+  color:#8A8A8A;
+  font-size:14px;
+  padding:60px 0 20px;
+}
+
+.footer p{
+  color:#8a8a8a;
+
+}
+.footer h3{
+  color:#fff;
+  margin-bottom:20px;
+
+}
+
+.footer-col-1, .footer-col-2, .footer-col-3{
+  min-width:250px;
+  margin-bottom:20px;
+}
+.footer-col-1{
+  flex-basis: 30%;
+}
+.footer-col-2{
+  width:1080px;
+  flex:1;
+  text-align:center;
+  margin-bottom:20px;
+
+}
+.footer-col-3{
+  flex-basis:12%;
+}
