--- a/templates/product.html
+++ b/templates/product.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block title %} Tea {{ name }} {% endblock %}
 {% block body %}
-<h1> {{product_type}} {{ name }} </h1>
-<a href="/buy/product/{{product_type}}/{{name}}">Buy</a>
+<img src="/static/images/{{product.image}}.png">
+<h1> {{product.product_type.name}} {{ product.name }} </h1>
+<a href="/buy/{{product.id}}">Buy</a>
 {% endblock %}
