--- a/templates/buy.html
+++ b/templates/buy.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %} Tea {{ name }} {% endblock %}
 {% block body %}
-<img src="/static/images/{{product.image}}.png">
+<img src="/static/images/{{product.image}}">
 <h1> Buying {{product.product_type.name}} {{ product.name }} </h1>
 <h3> Price {{ product.price }}</h3>
 {% endblock %}
