--- a/templates/product.html
+++ b/templates/product.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% block title %} Tea {{ name }} {% endblock %}
 {% block body %}
-<img src="/static/images/{{product.image}}.png">
+<img src="/static/images/{{product.image}}">
 <h1> {{product.product_type.name}} {{ product.name }} </h1>
 <a href="/buy/{{product.id}}">Buy</a>
+<a href="/product/{{product.id}}/edit">Edit</a>
 {% endblock %}
