--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
                         <li><a href="#blog">Blog</a></li>
                         <li><a href="#">Contact</a></li>
                         <li><a href="#">About</a></li>
-                        <li><a href="/product/create">Create Product</a></li>
+                        <li><a href="#" id="modal-trigger">Create Product</a></li>
                     </ul>
                 </nav>
                 <a href="#"><img src="/static/images/shoppingcart.png" width="30px" height="30px"></a>
@@ -216,4 +216,5 @@
         <hr>
         <p class="copyright">Copyright 2023 - all rights reserved</p>
     </section>
+{% include 'create.html'%}
 {% endblock %}
