--- a/templates/create.html
+++ b/templates/create.html
@@ -1,6 +1,5 @@
-{% extends 'base.html' %}
-{% block body %}
-
+<div class="modal">
+  <div class="modal-content">
 <form action="{{url_for('create_product')}}" method="post" enctype="multipart/form-data">
   <div>
   <label for="name">Name</label>
@@ -28,5 +27,26 @@
   </div>
   <input type="submit" value="Create"></input>
 </form>
-{% endblock %}
-
+  <button id="close-modal"> Cancel </button>
+</div>
+</div>
+<script>
+  function openModal () {
+    document.querySelector('.modal').style.display = 'flex'
+  }
+  function closeModal() {
+    document.querySelector('.modal').style.display = 'none'
+  }
+  document.getElementById('modal-trigger').addEventListener('click', function() {
+    console.log('clicked')
+    openModal()
+  })
+  document.getElementById('close-modal').addEventListener('click', function() {
+    closeModal()
+  })
+  window.addEventListener('click', function(event) {
+  if (event.target == document.querySelector('.modal')) {
+    closeModal();
+  }
+});
+</script>
