--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
                 <div class="logo">
                     <img id="logo" src="/static/images/logo.png" width="125px"></a>
                 </div>
-                <nav>
+                <nav class="center-nav">
                     <ul id="siteitems">
                         <li><a href="#catalog">Categories</a></li>
                         <li><a href="#blog">Blog</a></li>
@@ -16,7 +16,6 @@
                         <li><a href="#" id="modal-trigger">Create Product</a></li>
                     </ul>
                 </nav>
-                <a href="#"><img src="/static/images/shoppingcart.png" width="30px" height="30px"></a>
             </div>
             <div class="row">
                 <div class="col-2">
